--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "spider-man-test",
-  "version": "0.1.0",
+  "name": "spider-man-landing-page",
+  "version": "0.0.1a",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -19,5 +19,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.3"
   }
 }
