--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babylonjs/core": "^5.44.0",
+    "@babylonjs/gui": "^5.44.0",
     "@next/font": "13.1.5",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
@@ -18,6 +19,7 @@
     "eslint-config-next": "13.1.5",
     "next": "13.1.5",
     "react": "18.2.0",
+    "react-babylonjs": "^3.1.15",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
