--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babylonjs/core": "^5.44.0",
     "@babylonjs/gui": "^5.44.0",
+    "@babylonjs/loaders": "^5.45.1",
     "@next/font": "13.1.5",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
